# halo2_solidity_verifier

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml
examples/: separately.rs
src/: codegen.rs  evm.rs  lib.rs  test.rs  transcript.rs
src/codegen/: evaluator.rs  pcs.rs  template.rs  util.rs
templates/: Halo2Verifier.sol  Halo2VerifierReusable.sol  Halo2VerifyingArtifact.sol  Halo2VerifyingKey.sol
