[package]
name = "halo2_solidity_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.4.0" }
#halo2_frontend = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.4.0" }
halo2_proofs = { path = "../halo2/halo2_proofs" }
halo2_backend = { path = "../halo2/halo2_backend" }
halo2_frontend = { path = "../halo2/halo2_frontend" }
halo2_middleware = { path = "../halo2/halo2_middleware" }
askama = { version = "0.12.0", features = ["config"], default-features = false }
hex = "0.4.3"
ruint = "1"
sha3 = "0.10"
itertools = "0.11.0"

# For feature = "evm"
revm = { version = "3.3.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"
revm = { version = "3.3.0", default-features = false }
halo2_maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2024_01_31", package = "maingate" }

[features]
default = []
evm = ["dep:revm"]

[[example]]
name = "separately"
required-features = ["evm"]
